<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Din contul -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/from_account"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="1dp"/>

        <TextView
            android:id="@+id/fromAccountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:layout_marginTop="4dp"/>

        <!-- Catre Beneficiar -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_account"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/beneficiaryName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:layout_marginTop="4dp"/>

        <EditText
            android:id="@+id/beneficiaryAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/account_number"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:layout_marginTop="4dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sum"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/paymentAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ron"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:layout_marginTop="4dp"
            android:inputType="numberDecimal"
            android:digits="0123456789,"
            android:maxLength="15" />

        <!-- Detalii Plată -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payment_details"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <EditText
            android:id="@+id/paymentDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/transfer"
            android:background="@drawable/rounded_corner"
            android:padding="12dp"
            android:layout_marginTop="4dp"
            android:inputType="textMultiLine"
            android:minLines="2"
            android:maxLines="4" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recurrency"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>

        <Spinner
            android:id="@+id/recurrenceSpinner"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/rounded_corner"
            android:layout_marginTop="4dp"
            android:padding="12dp"
            android:entries="@array/recurrence_options" />

        <!-- Buton Continuă -->
        <Button
            android:id="@+id/btnContinue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/make_payment"
            android:textSize="18sp"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white"
            android:layout_marginTop="24dp"
            android:padding="16dp"/>

    </LinearLayout>
</ScrollView>
