<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/pageTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_details"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>


        <!-- TEMPLATE FIELD -->
        <!-- NUME -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/inputName"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""
                android:enabled="false"
                android:padding="12dp"
                android:background="@drawable/rounded_corner" />

            <ImageButton
                android:id="@+id/btnEditName"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:padding="6dp"
                android:src="@android:drawable/ic_menu_edit" />
        </LinearLayout>


        <!-- EMAIL -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/inputEmail"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""
                android:enabled="false"
                android:padding="12dp"
                android:background="@drawable/rounded_corner" />
        </LinearLayout>


        <!-- PHONE -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginBottom="16dp">

            <EditText
                android:id="@+id/inputPhone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""
                android:enabled="false"
                android:padding="12dp"
                android:background="@drawable/rounded_corner" />

            <ImageButton
                android:id="@+id/btnEditPhone"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:padding="6dp"
                android:src="@android:drawable/ic_menu_edit" />
        </LinearLayout>


        <!-- PAROLA -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <EditText
                android:id="@+id/inputPassword"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text=""
                android:enabled="false"
                android:inputType="textPassword"
                android:padding="12dp"
                android:background="@drawable/rounded_corner" />

            <ImageButton
                android:id="@+id/btnEditPassword"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:padding="6dp"
                android:src="@android:drawable/ic_menu_edit" />


        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#252355"
            android:text="@string/update_details"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="16dp"
            android:id="@+id/update_user_details_button"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#252355"
            android:text="@string/logout"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:layout_marginHorizontal="16dp"
            android:id="@+id/logout_button"
            />
    </LinearLayout>
</ScrollView>
